#-----------------------------------------------------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.19 FATAL_ERROR)
#-----------------------------------------------------------------------------------------------------------------------

project(BryptNode VERSION 0.0.0 LANGUAGES CXX)
add_library(PROJECT_OPTIONS INTERFACE)

#-----------------------------------------------------------------------------------------------------------------------
# CMake Modules. 
#-----------------------------------------------------------------------------------------------------------------------
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(BaseConfiguration)
include(CompileOptions)
include(ExternalLibraries)
#-----------------------------------------------------------------------------------------------------------------------

#-----------------------------------------------------------------------------------------------------------------------
# The ExternalLibraries script may make updates to the source directory 
# in order to avoid redownloading dependencies if the build directory has
# been cleared. It is now safe to explicitly disable in source builds. 
#-----------------------------------------------------------------------------------------------------------------------
set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
#-----------------------------------------------------------------------------------------------------------------------

#-----------------------------------------------------------------------------------------------------------------------
# Set the compile warnings and options for compiling 
#-----------------------------------------------------------------------------------------------------------------------
set_project_options(PROJECT_OPTIONS)
#-----------------------------------------------------------------------------------------------------------------------

#-----------------------------------------------------------------------------------------------------------------------
# Allow the project source files to find headers by dir name instead
# of the relative path. 
#-----------------------------------------------------------------------------------------------------------------------
include_directories(${CMAKE_SOURCE_DIR})
#-----------------------------------------------------------------------------------------------------------------------

#-----------------------------------------------------------------------------------------------------------------------
# Options
#-----------------------------------------------------------------------------------------------------------------------
option(ENABLE_TESTS "Enable Unit Test Builds" ON)
option(SKIP_BINARY "Skip Brypt Binary Build" OFF)
option(SKIP_SHARED_LIBRARY "Skip Brypt Shared Library Build" OFF)
#-----------------------------------------------------------------------------------------------------------------------

#-----------------------------------------------------------------------------------------------------------------------
# Project source build. 
#-----------------------------------------------------------------------------------------------------------------------
if(NOT SKIP_BINARY)
    add_subdirectory(BryptIdentifier)
    add_subdirectory(BryptMessage)
    add_subdirectory(Components)
    add_subdirectory(BryptNode)
endif()

if(NOT SKIP_SHARED_LIBRARY)
    add_subdirectory(BryptLibrary)
endif()
#-----------------------------------------------------------------------------------------------------------------------

#-----------------------------------------------------------------------------------------------------------------------
# Testing build.
#-----------------------------------------------------------------------------------------------------------------------
if(ENABLE_TESTS)
  enable_testing()
  add_subdirectory(Tests)
endif()
#-----------------------------------------------------------------------------------------------------------------------
