#-----------------------------------------------------------------------------------------------------------------------
add_subdirectory(Awaitable)
add_subdirectory(Configuration)
add_subdirectory(Core)
add_subdirectory(Event)
add_subdirectory(Identifier)
add_subdirectory(Message)
add_subdirectory(Network)
add_subdirectory(Peer)
add_subdirectory(Processor)
add_subdirectory(Route)
add_subdirectory(Security)
add_subdirectory(Scheduler)
add_subdirectory(State)
#-----------------------------------------------------------------------------------------------------------------------
